2005-04-02  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c: Iron corner cases involving shadow termination
	during transient states (e.g. wait on start barrier, primary mode
	switch).
	(xnshadow_signal_completion): Keep the tasklist read locked across
	the call to wake_up_process().

	* nucleus/shadow.c (detach_from_interface): Remove unused
	service. Global wipeout of all threads belonging to a skin should
	be done at that skin's level.
	
2005-04-01  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_harden): Return -ERESTARTSYS upon
	pending signal instead of -EINTR.

	* fusion/nucleus/shadow.c: Rewrite the shadow mapping completion
	protocol (formerly sync_wait/sync_wait) so that we don't need to
	pass PIDs from user-space, so we are now insensitive to the
	LinuxThreads vs NPTL issue regarding PID uniqueness.

2005-03-30  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.10,11-i386-r10c1.

	* nucleus/shadow.c (schedule_linux_call, xnshadow_start): Use
	adeos_processor_id() instead of smp_processor_id(), so we don't
	trigger Linux preemption debug traps inadvertently.

	* nucleus/shadow.c (xnshadow_map): Disable preemption as needed.

2005-03-29  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/cruncher/cruncher.c (main): Switch the timer off upon
	exit.

	* nucleus/shadow.c (xnshadow_harden, xnshadow_relax): Increment
	mode switch counters as expected.

	* nucleus/module.c (__get_thread_timeout): Fix signedness issue.

 	* RELEASE: fusion-0.7

2005-03-28  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/cruncher/cruncher.c (main): Limit stack space of
	spawned threads to PTHREAD_STACK_MIN * 2.

	* skins/rtai/lib/task.c (rt_task_create): Limit stack space to
	PTHREAD_STACK_MIN * 4 when none has been specified. 1Mb default is
	clearly overkill for real-time threads.

2005-03-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/system.h (xnarch_save_fpu): Save