@@ -17,45 +17,43 @@ RT_SEM display_sem;
 #define ONE_BILLION  1000000000
 #define TEN_MILLION    10000000
 
-long minjitter = TEN_MILLION,
-     maxjitter = -TEN_MILLION,
-     avgjitter = 0,
-     overrun = 0;
+long minjitter, maxjitter, avgjitter, overrun;
 
 int sampling_period = 0;
-int test_duration = 0;		/* sec of testing = 60 * -T <min>, 0 is inf */
-int data_lines = 21;		/* lines of data per header line */
+int test_duration = 0;	/* sec of testing, via -T <sec>, 0 is inf */
+int data_lines = 21;	/* data lines per header line, -l <lines> to change */
+int quiet = 0;		/* suppress printing of RTH, RTD lines when -T given */
 
 #define MEASURE_PERIOD ONE_BILLION
 #define SAMPLE_COUNT (MEASURE_PERIOD / sampling_period)
 
 #define HISTOGRAM_CELLS 100
-
-unsigned long histogram[HISTOGRAM_CELLS];
+int histogram_size = HISTOGRAM_CELLS;
+unsigned long *histogram_avg, *histogram_max, *histogram_min;
 
 int do_histogram = 0, finished = 0;
+int bucketsize = 1000;	/* default = 1000ns, -B <size> to override */
 
-static inline void add_histogram (long addval)
 
+static inline void add_histogram (long *histogram, long addval)
 {
-    long inabs = rt_timer_ticks2ns(addval >= 0 ? addval : -addval) / 1000; /* us steps */
-    histogram[inabs < HISTOGRAM_CELLS ? inabs : HISTOGRAM_CELLS-1]++;
+    /* us steps */
+    long inabs = rt_timer_ticks2ns(addval >= 0 ? addval : -addval) / bucketsize;
+    histogram[inabs < histogram_size ? inabs : histogram_size-1]++;
 }
 
 void latency (void *cookie)
-
 {
-    long minj = TEN_MILLION, maxj = -TEN_MILLION, dt, sumj;
     int err, count, nsamples;
     RTIME expected, period;
 
     err = rt_timer_start(TM_ONESHOT);
 
     if (err)
-        {
+      {
 	fprintf(stderr,"latency: cannot start timer, code %d\n",err);
 	return;
-	}
+      }
 
     nsamples = ONE_BILLION / sampling_period;
     period = rt_timer_ns2ticks(sampling_period);
@@ -63,40 +61,49 @@ void latency (void *cookie)
     err = rt_task_set_periodic(NULL,TM_NOW,sampling_period);
 
     if (err)
-	{
+      {
 	fprintf(stderr,"latency: failed to set periodic, code %d\n",err);
 	return;
-	}
+      }
 
     for (;;)
-	{
+      {
+	long minj = TEN_MILLION, maxj = -TEN_MILLION, dt, sumj;
+	overrun = 0;
+	
 	for (count = sumj = 0; count < nsamples; count++)
-	    {
+	  {
 	    expected += period;
 	    err = rt_task_wait_period();
-
+	    
 	    if (err)
-		{
+	      {
 		if (err != -ETIMEDOUT)
-		    rt_task_delete(NULL); /* Timer stopped. */
-
+		  rt_task_delete(NULL); /* Timer stopped. */
+		
 		overrun++;
-		}
-
+	      }
+	    
 	    dt = (long)(rt_timer_tsc() - expected);
 	    if (dt > maxj) maxj = dt;
 	    if (dt < minj) minj = dt;
 	    sumj += dt;
 
 	    if (do_histogram && !finished)
-		add_histogram(dt);
-	    }
-
+	      add_histogram(histogram_avg, dt);
+	  }
+	
+	if (do_histogram && !finished)
+	  {
+	    add_histogram(histogram_max, maxj);
+	    add_histogram(histogram_min, minj);
+	  }
+    
 	minjitter = rt_timer_ticks2ns(minj);
 	maxjitter = rt_timer_ticks2ns(maxj);
 	avgjitter = rt_timer_ticks2ns(sumj / nsamples);
 	rt_sem_v(&display_sem);
-	}
+      }
 }
 
 void display (void *cookie)
@@ -115,6 +122,9 @@ void display (void *cookie)
 
     time(&start);
 
+    if (quiet)
+      fprintf(stderr, "running quietly for %d seconds\n", test_duration);
+
     for (;;)
 	{
 	err = rt_sem_p(&display_sem,TM_INFINITE);
@@ -127,39 +137,50 @@ void display (void *cookie)
 	    rt_task_delete(NULL);
 	    }
 
-	if (data_lines && (n++ % data_lines)==0)
+	if (!quiet)
 	    {
-	    time_t now, dt;
-	    time(&now);
-	    dt = now - start;
-	    printf("RTH|%12s|%12s|%12s|%12s|     %.2ld:%.2ld:%.2ld\n",
-		   "lat min","lat avg","lat max","overrun",
-		   dt / 3600,(dt / 60) % 60,dt % 60);
+	    if (data_lines && (n++ % data_lines)==0)
+	        {
+		time_t now, dt;
+		time(&now);
+		dt = now - start;
+		printf("RTH|%12s|%12s|%12s|%12s|     %.2ld:%.2ld:%.2ld\n",
+		       "lat min","lat avg","lat max","overrun",
+		       dt / 3600,(dt / 60) % 60,dt % 60);
+	        }
+	    
+	    printf("RTD|%12ld|%12ld|%12ld|%12ld\n",
+		   minjitter,
+		   avgjitter,
+		   maxjitter,
+		   overrun);
 	    }
-
-	printf("RTD|%12ld|%12ld|%12ld|%12ld\n",
-	       minjitter,
-	       avgjitter,
-	       maxjitter,
-	       overrun);
 	}
 }
 
-void dump_histogram (void)
-
+void dump_histogram (long *histogram, char* kind)
 {
     int n, total_hits = 0;
   
-    for (n = 0; n < HISTOGRAM_CELLS; n++)
+    fprintf(stderr,"HSH-%s| latency range (usecs) | number of samples\n", kind);
+
+    for (n = 0; n < histogram_size; n++)
         {
 	long hits = histogram[n];
 
 	if (hits) {
-	    fprintf(stderr,"HSD|%3d-%3d|%ld\n",n,n + 1,hits);
+	    fprintf(stderr,"HSD-%s|%3d-%3d|%ld\n",kind, n, n+1, hits);
 	    total_hits += hits;
 	}
     }
     fprintf(stderr,"HST|%d\n",total_hits);
+}
+
+void dump_histograms (void)
+{
+  dump_histogram (histogram_avg, "avg");
+  dump_histogram (histogram_max, "max");
+  dump_histogram (histogram_min, "min");
 }
 
 void cleanup_upon_sig(int sig __attribute__((unused)))
@@ -170,7 +191,11 @@ void cleanup_upon_sig(int sig __attribute__((unused)))
     finished = 1;
 
     if (do_histogram)
-	dump_histogram();
+	dump_histograms();
+
+    if (histogram_avg)	free(histogram_avg);
+    if (histogram_max)	free(histogram_max);
+    if (histogram_min)	free(histogram_min);
 
     fflush(stdout);
 
@@ -182,12 +207,22 @@ int main (int argc, char **argv)
 {
     int c, err;
 
-    while ((c = getopt(argc,argv,"hp:l:T:")) != EOF)
+    while ((c = getopt(argc,argv,"hp:l:T:qH:B:")) != EOF)
 	switch (c)
 	    {
 	    case 'h':
 		/* ./latency --h[istogram] */
 		do_histogram = 1;
+		break;
+
+	    case 'H':
+
+		histogram_size = atoi(optarg);
+		break;
+
+	    case 'B':
+
+		bucketsize = atoi(optarg);
 		break;
 
 	    case 'p':
@@ -206,15 +241,36 @@ int main (int argc, char **argv)
 		alarm(test_duration);
 		break;
 
+	    case 'q':
+
+		quiet = 1;
+		break;
+		
 	    default:
 		
 		fprintf(stderr, "usage: latency [options]\n"
 			"  [-h]				# print histogram of scheduling latency\n"
+			"  [-H <histogram-size>]	# default = 200, increase if your last bucket is full\n"
+			"  [-B <bucket-size>]		# default = 1000ns, decrease for more resolution\n"
 			"  [-p <period_us>]		# sampling period\n"
 			"  [-l <data-lines per header>]	# default=21, 0 to supress headers\n"
-			"  [-T <test_duration_seconds>]	# default=0, so ^C to end\n");
+			"  [-T <test_duration_seconds>]	# default=0, so ^C to end\n"
+			"  [-q]				# supresses RTD, RTH lines if -T is used\n");
 		exit(2);
 	    }
+
+    if (!test_duration && quiet)
+	{
+	fprintf(stderr, "latency: -q only works if -T has been given.\n");
+	quiet = 0;
+	}
+
+    histogram_avg = calloc(histogram_size, sizeof(long));
+    histogram_max = calloc(histogram_size, sizeof(long));
+    histogram_min = calloc(histogram_size, sizeof(long));
+
+    if (!(histogram_avg && histogram_max && histogram_min)) 
+        cleanup_upon_sig(0);
 
     if (sampling_period == 0)
 	sampling_period = 100000; /* ns */
